Bug 75260
Multiple issues with bubble and misalignment in message reading pane
Added the ZPropertySheet to the table, for the padding to be correct. Then long story short - I refactored the templates to do the same thing for the "sent by" for both message and conv view - extracted a sub-template that uses the conv approach of using spans for the different parts (sent-by, obo and bwo).   The result is common code for
both places, that's simpler and cleaner.

http://bugzilla.zimbra.com/show_bug.cgi?id=75260

Copied from Perforce
 Change: 382014

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -755,13 +755,10 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 .ZmMailMsgCapsuleView .LabelColName {
 	@MailMsgHeaderLabel@
 	line-height:1.6em;
-	padding:3px 0;
 	text-align:right;
 	vertical-align:top;
 	white-space:nowrap;
-#IFDEF MSIE
-	line-height:1.2em;
-#ENDIF
+	width:1%;
 }
 
 .ZmMailMsgView .LabelColValue, 
@@ -770,7 +767,6 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 	line-height:1.6em;
 	vertical-align:top;
 	white-space:normal;
-	width:100%
 }
 
 .ZmMailMsgView .SubjectCol {
